<resources>
    <string name="app_name">FoodRunner</string>
    <string name="new_app_name">Food Runner</string>
    <string name="mobile_number">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register Yourself</string>
    <string name="preference_file_name">FoodRunner preference</string>
    <string name="txtDesc">Enter your registered mobile number and email below :</string>
    <string name="email_address">Email Address</string>
</resources>
