<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/mobile_number"
        android:padding="10dp"
        android:layout_below="@+id/imgLoginLogo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_below="@+id/etPhone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnColor"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_below="@+id/etPass"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/btnLogin"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="15sp"/>


</RelativeLayout>