<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/imgForgotLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDesc"
        android:layout_below="@+id/imgForgotLogo"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/etForgotMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDesc"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/mobile_number"
        android:maxLength="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForgotMobile"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address"
        android:inputType="textWebEmailAddress" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etForgotEmail"
        android:background="@color/btnColor"
        android:text="NEXT"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white" />








</RelativeLayout>